		FindFirstChangeNotification/CDirectoryChangeWatcher , inotify
	- Load last project automatically, but allow opening other while parsing
- C++ parsing for drawings
	- BUG: Model objects not handled properly
		- namespace - std should not be a class
		- templates also, why so few std::vector<std::string>,
		  where is std::vector<ModelObject>
		- operator()
	- Multiple case statements without breaks appear nested.
	- Overloaded operations are not differentiated
	- function return type not listed
	- Some statements not parsed: else (currently faked), goto, default, return, etc.
	- May want to save complete type info (explicit const, *, &, etc) in the XMI files.
	- Should discard internal function names/operations?
	- Not finding template derived types for calls to functions. vector<type>.resize()
	- It may be nice if pkg-config was default for C++ settings for include paths.
	- Should save whether a class is defined in the XMI file to find correct source module
		for empty classes.
	- no visibility			(Use CXXAccessSpecifier, oovCppParser.cpp)
	- no packages
	- namespaces not shown
	- no nested classes
- Journal
	- Allow more copies of diagrams?
- Component Diagrams
	- Changing build settings/dependencies should update components
	- Show external project component dependencies, module dependencies
- Class Diagrams
	- BUG: forward class definitions mess up source line numbers
	- When class members are not shown, should be easy way to view members
	- FilePath not showing inheritance - templates?
	- Allow adding selected class to existing diagram - right click in class list
	- Add filter for class list
	- Show progress/cancel dlg for long operations, loading class list and large drawings
	- Set each class drawing preferences by whether component is the same.
	- Need either show classes that will be added, or undo, or multiple drawing copies
	- Fix const indicator to indicate target modification, not const pointers, etc.
	- Add go to operation (callbacks to journal)