@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><!-- DC Blaha - 6/8/2009 -->
+<html><head>
+<!-- DC Blaha - 6/8/2009 -->
 
 
 
@@ -36,8 +37,10 @@ The following lists releases in reverse chronological order.
 <h2>2014-02</h2>This version contains:<br>
 <ul>
   <li>Display dependency diagrams including external package dependencies</li>
-  <li>Improved speed of class lists and drawing for large projects<br>
+  <li>Vastly improved speed of loading projects especially for large projects</li>
+  <li>Reduced large delays for large drawings.<br>
   </li>
+
 
   <li>Automatically determines library and package link dependencies for each component<br>
   </li>
